<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorDarkBackground"
    tools:context=".ui.activities.RegisterMainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_login"
            android:paddingTop="56dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:textColor="@color/colorMainFont"
            android:textSize="35dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:hint="Enter name"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:hint="Enter email"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Enter password"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter phone #"
            android:ems="10"
            android:id="@+id/phoneText"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/usertypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:popupBackground="@color/colorAccent"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:spinnerMode="dropdown"
            android:entries="@array/signup_usertype_spinner" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="next"
            android:id="@+id/registerNextButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp" />
    </LinearLayout>
</ScrollView>
