<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorDarkBackground"
    tools:context=".ui.activities.RegisterRenterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_login"
            android:paddingTop="56dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="Renter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:textColor="@color/colorMainFont"
            android:textSize="35dp"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/liscenseIdText"
            android:hint="Enter license ID"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/liscensePlateNumText"
            android:hint="Enter license plate #"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="next"
            android:id="@+id/nextButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp" />

    </LinearLayout>
</ScrollView>
