...
        android:title="Switch to Renter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item android:id="@+id/LogOut"
        android:orderInCategory="200"
        android:title="Log Out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</menu>

    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->

