...
            android:layout_marginBottom="24dp"
            android:padding="12dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="signup"
            android:id="@+id/registerButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp" />

...
